# hellocmake

./: CMakeLists.txt  CTestConfig.cmake  main.cpp
